--- a/config
+++ b/config
@@ -50,9 +50,9 @@ bindsym $mod+Return exec kitty
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -190,9 +190,9 @@ exec --no-startup-id nitrogen --restore
 
 # Screen brightness controls
 # increase screen brightness
-#bindsym XF86MonBrightnessUp exec xbacklight -inc 20
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20
 # decrease screen brightness
-#bindsym XF86MonBrightnessDown exec xbacklight -dec 20
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20
 
 #Luz background
 #bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
@@ -203,7 +203,7 @@ exec --no-startup-id nitrogen --restore
 bar {
 status_command i3status
 mode hide
-#output primary
+output primary
 #tray_output none
 font pango:DejaVu Sans Mono 6
 }
@@ -217,7 +217,7 @@ for_window [class="^.*"] border pixel 1
 new_window 1pixel
 
 # Provide Gaps to Windows. Increase/Decrease as you like.
-smart_borders on
+#smart_borders on
 gaps inner 1
 gaps outer 1
 
@@ -235,7 +235,7 @@ bindsym --release Shift+Print exec "scrot --select 'scrot-%Y-%m-%d_%h-%m-%s_$wx$
 
 
 # Firefox
-bindsym $mod+w exec firefox
+bindsym $mod+w exec firefox-nightly
 
 # Files
 bindsym $mod+e exec nautilus
