--- a/i3status.conf
+++ b/i3status.conf
@@ -59,7 +59,7 @@ battery all {
 }
 
 battery 0 {
-    format = "%percentage %remaining "
+    format = "%percentage %remaining"
     path = "/sys/class/power_supply/BAT%d/uevent"
     low_threshold = "30"
     threshold_type = "time"
@@ -68,8 +68,8 @@ battery 0 {
 }
 
 volume master {
-    format = "%volume  "
-    format_muted = ""
+    format = "%volume "
+    format_muted = "M"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
@@ -86,14 +86,14 @@ load {
 }
 
 memory {
-        format = "%used | %available "
+#        format = "%used | %available "
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 path_exists harold {
     path = "/tmp/harold-mount.lock"
-    format = ""
+#    format = ""
     color_bad = "#555555"
 }
 
@@ -102,5 +102,5 @@ tztime local {
 }
 
 time {
-    format = "%m-%d  | %H:%M 🕘"
+    format = "%m-%d | %H:%M 🕘"
 }
